--- a/.github/workflows/devops-b-template-builder.yml
+++ b/.github/workflows/devops-b-template-builder.yml
@@ -72,7 +72,7 @@ jobs:
       - name: List artifacts
         run: ls -lah artifacts/l1_images
 
-      ## Upload manifest artifacts
+      ## Upload build artifacts
       - name: Upload artifacts
         if: ${{ success() }}
         uses: actions/upload-artifact@v4
