--- a/.github/workflows/devops-c-full-rebuild.yml
+++ b/.github/workflows/devops-c-full-rebuild.yml
@@ -34,6 +34,8 @@ jobs:
       PVE_STORAGE_VM:                 ${{ secrets.PVE_STORAGE_VM }}
       TF_VAR_PROXMOX_VM_PUBLIC_KEY:   ${{ secrets.TF_VAR_PROXMOX_VM_PUBLIC_KEY }}
       DOPPLER_SERVICE_TOKEN:          ${{ secrets.DOPPLER_SERVICE_TOKEN }}
+      AWS_ACCESS_KEY_ID:              ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY:          ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       ## disable doppler in makefile
       CI: "true"
       DOPPLER: "0"
