--- a/.github/workflows/devops-d-converge-only.yml
+++ b/.github/workflows/devops-d-converge-only.yml
@@ -28,6 +28,8 @@ jobs:
       PVE_NODE:                       ${{ secrets.PVE_NODE }}
       PVE_STORAGE_VM:                 ${{ secrets.PVE_STORAGE_VM }}
       DOPPLER_SERVICE_TOKEN:          ${{ secrets.DOPPLER_SERVICE_TOKEN }}
+      AWS_ACCESS_KEY_ID:              ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY:          ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       ## disable doppler in makefile
       CI: "true"
       DOPPLER: "0"
