--- a/.github/workflows/devops-b-template-builder.yml
+++ b/.github/workflows/devops-b-template-builder.yml
@@ -2,9 +2,18 @@ name: devops b - template builder
 
 on:
   workflow_dispatch:
+    inputs:
+      update-stable:
+        description: "Update vm-template-stable.json to latest template manifest"
+        required: true
+        default: "no"
+      commit-artifacts:
+        description: "Commit artifacts and/or stable symlink back to repo"
+        required: true
+        default: "yes"
 
 permissions:
-  contents: read
+  contents: write 
   actions: read
 
 concurrency:
@@ -65,6 +74,8 @@ jobs:
           make l1-build
 
       - name: Create manifest
+        env:
+          L1_UPDATE_STABLE: ${{ inputs.update-stable == 'yes' && '1' || '0' }}
         run: |
           set -euo pipefail
           make l1-manifest
@@ -81,3 +92,32 @@ jobs:
           path: artifacts/l1_images
           retention-days: 28
           if-no-files-found: error
+
+      ## Optionally commit artifacts and/or stable link
+      - name: Commit and push artifacts
+        if: ${{ inputs.update-stable == 'yes' || inputs.commit-artifacts == 'yes' }}
+        run: |
+          set -euo pipefail
+
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          echo "Git status before:"
+          git status --short || true
+
+          # Add the stuff we care about
+          git add artifacts infra/arch/devops || true
+
+          # If nothing staged, bail out quietly
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+            exit 0
+          fi
+
+          git commit -m "chore: update devops template artifacts" || {
+            echo "Nothing to commit after all."
+            exit 0
+          }
+
+          # Push back to the same branch this workflow ran on
+          git push origin "HEAD:${GITHUB_REF#refs/heads/}"
