--- a/.github/workflows/devops-a-iso-builder.yaml
+++ b/.github/workflows/devops-a-iso-builder.yaml
@@ -86,3 +86,16 @@ jobs:
           cat infra/arch/iso/profile/airootfs/root/.automated_script.sh
           echo "=== END ==="
   
+      ## rebuild the arch iso with custom script
+      - name: Build Arch ISO with mkarchiso
+        run: |
+          docker run --rm -i --privileged \
+            -v "$PWD:/work" -w /work/infra/arch/iso \
+            -e ARCHISO_TRACE=1 \
+            archlinux:latest bash -lc '
+              set -eux
+              pacman -Syu --noconfirm archiso
+              rm -rf work out
+              mkarchiso -v -w work -o out profile 2>&1 | tee build.log
+              ls -lh out/*.iso
+            '
