--- a/ansible/playbooks/arch-devops.yml
+++ b/ansible/playbooks/arch-devops.yml
@@ -11,6 +11,7 @@
     - { role: arch_services,   tags: ["arch_services"] }
     - { role: arch_monitoring, tags: ["arch_monitoring"] }
     - { role: arch_devops,     tags: ["arch_devops"] }
+    - { role: dotfiles,        tags: ["arch_dotfiles"] }
     # Optional desktop layer; toggle via group_vars (default false)
     - { role: arch_aur,        when: arch_aur_enabled | default(false), tags: ["arch_aur"] }
     - { role: arch_desktop,    when: arch_desktop_enabled | default(false), tags: ["arch_desktop"] }
