--- a/ansible/roles/dotfiles/defaults/main.yaml
+++ b/ansible/roles/dotfiles/defaults/main.yaml
@@ -1,10 +1,17 @@
 # ansible/roles/dotfiles/defaults/main.yml
 
-dotfiles_user: "{{ ansible_user_id }}"
+# User whose dotfiles we are managing
+dotfiles_user: "lab"   # or override per-host/group
+
+# Compute the home directory for that user
+dotfiles_home: >-
+  {{ '/root' if dotfiles_user == 'root' else '/home/' ~ dotfiles_user }}
+
 dotfiles_repo: "https://github.com/allan-lewis/dotfiles.git"
 dotfiles_version: "main"
 
-dotfiles_dest: "{{ ansible_env.HOME }}/.dotfiles"
+# Repo lives inside that user's home
+dotfiles_dest: "{{ dotfiles_home }}/.dotfiles"
 
 dotfiles_stow_packages:
   - common-zsh
