vm templates by os

--- a/.github/workflows/devops-b-template-builder.yml
+++ b/.github/workflows/devops-b-template-builder.yml
@@ -101,7 +101,7 @@ jobs:
           git status --short || true
 
           # Add the stuff we care about
-          git add infra/arch/devops || true
+          git add infra/arch || true
 
           # If nothing staged, bail out quietly
           if git diff --cached --quiet; then
