--- a/ansible/playbooks/l3-converge-arch.yml
+++ b/ansible/playbooks/l3-converge-arch.yml
@@ -1,7 +1,6 @@
 ---
-# L3 — Arch convergence (dry-run friendly)
-- name: Arch DevOps Host Convergence
-  hosts: arch_devops
+- name: Baseline Arch convergence
+  hosts: arch_devops:arch_tinker
   gather_facts: true
   become: true
 
@@ -10,8 +9,21 @@
     - { role: arch_hardening,  tags: ["arch_hardening"] }
     - { role: arch_services,   tags: ["arch_services"] }
     - { role: arch_monitoring, tags: ["arch_monitoring"] }
-    - { role: arch_devops,     tags: ["arch_devops"] }
     - { role: dotfiles,        tags: ["arch_dotfiles"] }
-    # Optional desktop layer; toggle via group_vars (default false)
     - { role: arch_aur,        when: arch_aur_enabled | default(false), tags: ["arch_aur"] }
+
+- name: Arch DevOps convergence
+  hosts: arch_devops
+  gather_facts: true
+  become: true
+
+  roles:
+    - { role: arch_devops,     tags: ["arch_devops"] }
+
+- name: Arch Tinker convergence
+  hosts: arch_tinker
+  gather_facts: true
+  become: true
+
+  roles:
     - { role: arch_desktop,    when: arch_desktop_enabled | default(false), tags: ["arch_desktop"] }
