makefile re-write

--- a/ansible/roles/arch_base/defaults/main.yaml
+++ b/ansible/roles/arch_base/defaults/main.yaml
@@ -15,6 +15,7 @@ arch_base_packages:
   - stow
   - zsh
   - starship
+  - neovim
 
 arch_base_enable_timesyncd: true
 arch_base_timezone: "{{ gitops_tz | default('America/New_York') }}"
