--- a/ansible/roles/arch_docker_compose/defaults/main.yml
+++ b/ansible/roles/arch_docker_compose/defaults/main.yml
@@ -4,7 +4,7 @@ arch_docker_compose_install_docker: true
 
 # Package names (official Arch repos)
 arch_docker_compose_docker_pkg: docker
-arch_docker_compose_compose_pkg: docker-compose-plugin
+arch_docker_compose_compose_pkg: docker-compose
 
 # Users that should be able to run docker without sudo
 # Adjust per host/group (e.g., ["lab", "allan", "devops"])
