--- a/ansible/roles/arch_devops/defaults/main.yaml
+++ b/ansible/roles/arch_devops/defaults/main.yaml
@@ -7,18 +7,18 @@ arch_devops_pacman_packages:
   - helm
   - ansible-core
 
-# Typically in role defaults or vars
 aws_cli_user: "{{ ansible_user }}"
 aws_cli_home: "/home/{{ aws_cli_user }}"
 aws_access_key_id: "{{ lookup('env', 'AWS_ACCESS_KEY_ID') | default('', true) }}"
 aws_secret_access_key: "{{ lookup('env', 'AWS_SECRET_ACCESS_KEY') | default('', true) }}"
 aws_default_region: "{{ lookup('env', 'AWS_DEFAULT_REGION') | default('us-east-1', true) }}"
 
-doppler_service_token: "{{ lookup('env', 'DOPPLER_SERVICE_TOKEN') | default('', true) }}"
-doppler_scope_dir: "/home/{{ ansible_user }}"  # example
-# doppler_project: "default" 
-# doppler_config: "dev"
+doppler_scope_dir: "/home/{{ ansible_user }}"
 
+## vars to be set by host
 # ansible_environment: "devops|staging|production"
+# doppler_service_token: "{{ lookup('env', 'DOPPLER_SERVICE_TOKEN') | default('', true) }}"
+# doppler_project: "orchestrator" 
+# doppler_config: "stg"
 # terraform_environment_dir: "/home/lab/gitops-homelab/terraform/environment/staging-k8s"
 # terraform_output_config_node: "beta"
