--- a/ansible/roles/arch_base/defaults/main.yaml
+++ b/ansible/roles/arch_base/defaults/main.yaml
@@ -16,6 +16,7 @@ arch_base_packages:
   - zsh
   - starship
   - neovim
+  - bind
 
 arch_base_enable_timesyncd: true
 arch_base_timezone: "{{ gitops_tz | default('America/New_York') }}"
