--- a/ansible/playbooks/l3-converge-arch.yml
+++ b/ansible/playbooks/l3-converge-arch.yml
@@ -5,12 +5,13 @@
   become: true
 
   roles:
-    - { role: arch_base,       tags: ["arch_base"] }
-    - { role: arch_hardening,  tags: ["arch_hardening"] }
-    - { role: arch_services,   tags: ["arch_services"] }
-    - { role: arch_monitoring, tags: ["arch_monitoring"] }
-    - { role: dotfiles,        tags: ["arch_dotfiles"] }
-    - { role: arch_aur,        when: arch_aur_enabled | default(false), tags: ["arch_aur"] }
+    - { role: arch_base,              tags: ["arch_base"] }
+    - { role: arch_hardening,         tags: ["arch_hardening"] }
+    - { role: arch_services,          tags: ["arch_services"] }
+    - { role: arch_monitoring,        tags: ["arch_monitoring"] }
+    - { role: arch_shell,             tags: ["arch_dotfiles"] }
+    - { role: arch_aur,               tags: ["arch_aur"], when: arch_aur_enabled | default(false) }
+    - { role: arch_docker_compose,    tags: ["arch_docker"] }
 
 - name: Arch DevOps convergence
   hosts: arch_devops
@@ -26,5 +27,4 @@
   become: true
 
   roles:
-    - { role: arch_docker_compose,        tags: ["arch_docker"] }
     - { role: arch_desktop,    when: arch_desktop_enabled | default(false), tags: ["arch_desktop"] }
